k3s/cluster/apps/nas-attached/nextcloud/workload/statefulset-mariadb.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb
  namespace: nextcloud
  labels:
    app.kubernetes.io/part-of: nextcloud
    app.kubernetes.io/name: mariadb
    app.kubernetes.io/component: database
spec:
  serviceName: mariadb
  replicas: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: mariadb
      app.kubernetes.io/component: database
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: nextcloud
        app.kubernetes.io/name: mariadb
        app.kubernetes.io/component: database
    spec:
      nodeSelector:
        node-type: vm
      terminationGracePeriodSeconds: 60
      securityContext:
        fsGroup: 100
      containers:
        - name: mariadb
          image: lscr.io/linuxserver/mariadb:11.4.8-r0-ls199
          imagePullPolicy: IfNotPresent
          ports:
            - name: mysql
              containerPort: 3306
          startupProbe:
            tcpSocket:
              port: mysql
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 30
          readinessProbe:
            tcpSocket:
              port: mysql
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 6
          livenessProbe:
            tcpSocket:
              port: mysql
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 3
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              memory: 512Mi
          volumeMounts:
            - name: mariadb-config
              mountPath: /config
      volumes:
        - name: mariadb-config
          persistentVolumeClaim:
            claimName: nextcloud-mariadb
