k3s/cluster/apps/nas-attached/nextcloud/workload/service-mariadb.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: nextcloud
  labels:
    app.kubernetes.io/part-of: nextcloud
    app.kubernetes.io/name: mariadb
    app.kubernetes.io/component: database
spec:
  selector:
    app.kubernetes.io/name: mariadb
    app.kubernetes.io/component: database
  ports:
    - name: mysql
      port: 3306
      targetPort: mysql
