k3s/cluster/apps/nas-attached/nextcloud/workload/service-nextcloud.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  namespace: nextcloud
  labels:
    app.kubernetes.io/part-of: nextcloud
    app.kubernetes.io/name: nextcloud
    app.kubernetes.io/component: app
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: https
    traefik.ingress.kubernetes.io/service.serverstransport: nextcloud-nextcloud-insecure@kubernetescrd
spec:
  selector:
    app.kubernetes.io/name: nextcloud
    app.kubernetes.io/component: app
  ports:
    - name: https
      port: 443
      targetPort: https
